tests/negative/abilities/with_non_context.orng
// with_non_context.orng:9:16: error: expected a context, got the type `Int`
// fn f() with Int {}
//               ^
// 
fn main() -> Int {
    4
}

fn f() with Int {}